app/src/main/java/com/example/windows/data/models/errors/UserSearchResponse.kt
package com.example.windows.data.models.errors

data class UserSearchResponse(val id: String, val name: String, val login: String, val avatar: String)